# ANN

./: .env.example  PRESENTATION_CONTENT.md  README.md  app.py  config.py  pyproject.toml  requirements.txt
data/: train_manifest.txt  val_manifest.txt
scripts/: generate_academic_gantt.py  generate_architecture.py  generate_data.py  generate_gantt.py  generate_table.py  generate_workflow.py  plot_metrics.py
src/: dataset.py  model.py  train.py  utils.py
src/ann/: __init__.py
static/: index.html  script.js  style.css
